2000-04-10  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/backend/ebook/e-book-view.c,
	addressbook/backend/ebook/e-book.c: Changed some incorrect
	gtk_object_refs and gtk_object_unrefs into bonobo_object_refs and
	bonobo_object_unrefs.

	* addressbook/backend/pas/pas-card-cursor.c: Changed a
	gtk_object_destroy to a gtk_object_unref.

	* addressbook/gui/minicard/e-minicard-view.c,
	addressbook/gui/minicard/e-minicard-view.h: Set a list pointer to
	NULL after freeing its contents.  Added
	e_minicard_view_remove_selection function.

	* addressbook/gui/minicard/e-reflow.c: Set a list pointer to NULL
	after freeing its contents.

2000-04-11  Chris Toshok  <toshok@helixcode.com>

	* addressbook/gui/component/addressbook.c (find_contact_cb):
	implement braindead dialog to input the query string for the view.

	also, change all callbacks to get the EMinicardView instead of the
	EBook.

	* addressbook/gui/minicard/e-minicard-view.c
	(e_minicard_view_get_arg): add missing break.

2000-04-10  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/gui/minicard/e-minicard-view.c,
	addressbook/gui/minicard/e-minicard-view.h: Added a "query"
	argument to the e-minicard-view.  Documented all the arguments to
	the e-minicard-view.

2000-04-10  Chris Toshok  <toshok@helixcode.com>

	* addressbook/gui/minicard/e-minicard-view.c (get_view): change
	the empty search string ("") to the valid (contains "full_name" "").

	* wombat/Makefile.am (wombat_LDADD): reorder so libeutil.la comes
	after libpas (since it uses the sexp stuff now.)

	* addressbook/backend/pas/Makefile.am (INCLUDES): add
	-I$(top_srcdir)/addressbook/backend/ebook

	* addressbook/backend/pas/pas-backend-file.c
	(view_destroy): free the search context and unref the sexp.
	(string_to_dbt): save the zero byte of strings, so we don't have
	to g_strndup everywhere.
	(func_contains): new function, implementing the (contains) search
	function.